fix: Loosen up some spacing:

--- a/styles/components/_posts.scss
+++ b/styles/components/_posts.scss
@@ -3,7 +3,11 @@
 }
 
 .posts__post {
-  margin-block-end: 1em;
+  margin-block-end: 1.5em;
+}
+
+.posts__post-description {
+  margin-block: 0.5em;
 }
 
 .posts__post-title {
